Better result check